# ExternData

./: .build.sh  .gitattributes  .gitignore  .msys2-build.sh  .travis.yml  CITATION.cff  LICENSE  README.md  build.drone.io.txt
.CI/: travis_after_success.sh  travis_script.sh
.github/: checkTags.json  check_deprecated_line_color.json  moparser.json  tidyHTML.json
.github/workflows/: checkCI.yml  checkCITATION.cff.yml
ExternData/: package.mo  package.order
ExternData/Examples/: package.mo  package.order
ExternData/Resources/: CMakeLists.txt
ExternData/Resources/BuildProjects/CMake/: ExternData.gta.runsettings.in  Modelica_platform.cmake  options.cmake  test.cmake
ExternData/Resources/BuildProjects/VisualStudio2010/: ED_2D.def  ED_2D.vcxproj  ED_2D.vcxproj.filters  ED_CSVFile.def  ED_CSVFile.vcxproj  ED_CSVFile.vcxproj.filters  ED_INIFile.def  ED_INIFile.vcxproj  ED_INIFile.vcxproj.filters  ED_JSONFile.def  ED_JSONFile.vcxproj  ED_JSONFile.vcxproj.filters  ED_MATFile.def  ED_MATFile.vcxproj  ED_MATFile.vcxproj.filters  ED_SSVFile.def  ED_SSVFile.vcxproj  ED_SSVFile.vcxproj.filters  ED_XLSFile.def  ED_XLSFile.vcxproj  ED_XLSFile.vcxproj.filters  ED_XLSXFile.def  ED_XLSXFile.vcxproj  ED_XLSXFile.vcxproj.filters  ED_XML2File.def  ED_XML2File.vcxproj  ED_XML2File.vcxproj.filters  ED_XMLFile.def  ED_XMLFile.sln  ED_XMLFile.vcxproj  ED_XMLFile.vcxproj.filters  ExternData.sln  bsxml-json.vcxproj  bsxml-json.vcxproj.filters  expat.vcxproj  expat.vcxproj.filters  hdf5.vcxproj  hdf5.vcxproj.filters  libxml2.vcxproj  libxml2.vcxproj.filters  (+8 more)
ExternData/Resources/BuildProjects/autotools/: Makefile.am  README  configure.ac
ExternData/Resources/C-Sources/: ED_CSVFile.c  ED_INIFile.c  ED_JSONFile.c  ED_MATFile.c  ED_SSVFile.c  ED_XLSFile.c  ED_XLSXFile.c  ED_XML2File.c  ED_XMLFile.c  ED_locale.h  ED_logging.h  ED_ptrtrack.h  Makefile  Makefile32  ModelicaMatIO.c  ModelicaMatIO.h  ModelicaUtilities.h  array.c  array.h  bsjson.c  bsjson.h  bsstr.c  bsstr.h  bsxml.c  bsxml.h  config.h  endian.c  uthash.h  xls.c  zstring_rtrim.h  zstring_strtok_dquotes.h
ExternData/Resources/C-Sources/bsxml-json/: COPYING  README  array.c  array.h  bsjson.c  bsjson.h  bsstr.h  bsxml.c  bsxml.h  utstring.h
ExternData/Resources/C-Sources/expat/: COPYING  README  README.md
ExternData/Resources/C-Sources/hdf5/: COPYING  README.txt
ExternData/Resources/C-Sources/inih/: ini.h
ExternData/Resources/C-Sources/libxml2/: xpath.c
ExternData/Resources/C-Sources/minizip/: MiniZip64_info.txt  ioapi.c  iowin32.c  iowin32.h  miniunz.c  unzip.c
ExternData/Resources/C-Sources/modelica/: ModelicaIO.c  ModelicaIO.h  ModelicaMatIO.c
ExternData/Resources/C-Sources/parson/: README.md  parson.c  parson.h
ExternData/Resources/C-Sources/zlib/: ChangeLog  README  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzguts.h  gzlib.c  zlib.h  (+8 more)
ExternData/Resources/Data/: test.xml
ExternData/Resources/Examples/: sample.tir  test.csv  test.ini  test.json  test.mat  test.ssv  test.xls  test.xlsx  test.xml  test_v1.ssv  test_v2.ssv  test_v6.mat  test_v7.3.mat  test_v7.mat
ExternData/Resources/Include/: ED_2D.c  ED_CSVFile.h  ED_INIFile.h  ED_JSONFile.h  ED_MATFile.h  ED_SSVFile.h  ED_XLSFile.h  ED_XLSXFile.h  ED_XML2File.h  ED_XMLFile.c  ED_XMLFile.h  gconstructor.h  msvc_compatibility.h
ExternData/Resources/Language/: ExternData.pot
ExternData/Resources/Licenses/: LICENSE_ExternData.txt  LICENSE_ModelicaIO.txt  LICENSE_ModelicaMatIO.txt  LICENSE_ModelicaUtilities.txt  LICENSE_bsxml-json.txt  LICENSE_hdf5.txt  LICENSE_inih.txt  LICENSE_libxls.txt  LICENSE_minini.txt  LICENSE_minizip.txt  LICENSE_parson.txt  LICENSE_uthash.txt  LICENSE_utstring.txt  LICENSE_zstring.txt
ExternData/Resources/Test/: Constants.h  Test_ED_CSV.cc  Test_ED_INI.cc  Test_ED_JSON.cc  Test_ED_MAT.cc  Test_ED_XLS.cc  Test_ED_XLSX.cc  Test_ED_XML.cc  Test_ED_XML2.cc  Test_Linkage.c  Test_Linkage.cc
(+298 files in other folders)
