lib_LTLIBRARIES = libbsxml-json.la libED_INIFile.la libED_JSONFile.la libED_MATFile.la libED_XLSFile.la libED_XLSXFile.la libED_XMLFile.la libexpat.la libzlib.la libparson.la

libbsxml_json_la_SOURCES = \
	../../C-Sources/bsxml-json/array.c \
	../../C-Sources/bsxml-json/bsjson.c \
	../../C-Sources/bsxml-json/bsxml.c

libED_INIFile_la_SOURCES = \
	../../C-Sources/inih/ini.c \
	../../C-Sources/ED_INIFile.c

libED_JSONFile_la_SOURCES = \
	../../C-Sources/ED_JSONFile.c

libED_MATFile_la_SOURCES = \
	../../C-Sources/ED_MATFile.c

libED_XLSFile_la_SOURCES = \
	../../C-Sources/libxls/src/endian.c \
	../../C-Sources/libxls/src/ole.c \
	../../C-Sources/libxls/src/xls.c \
	../../C-Sources/libxls/src/xlstool.c \
	../../C-Sources/ED_XLSFile.c

libED_XLSXFile_la_SOURCES = \
	../../C-Sources/minizip/ioapi.c \
	../../C-Sources/minizip/unzip.c \
	../../C-Sources/ED_XLSXFile.c

libED_XMLFile_la_SOURCES = \
	../../C-Sources/ED_XMLFile.c

libexpat_la_SOURCES = \
	../../C-Sources/expat/lib/xmlparse.c \
	../../C-Sources/expat/lib/xmlrole.c \
	../../C-Sources/expat/lib/xmltok.c \
	../../C-Sources/expat/lib/xmltok_impl.c \
	../../C-Sources/expat/lib/xmltok_ns.c

libzlib_la_SOURCES = \
	../../C-Sources/zlib/adler32.c \
	../../C-Sources/zlib/compress.c \
	../../C-Sources/zlib/crc32.c \
	../../C-Sources/zlib/deflate.c \
	../../C-Sources/zlib/gzclose.c \
	../../C-Sources/zlib/gzlib.c \
	../../C-Sources/zlib/gzread.c \
	../../C-Sources/zlib/gzwrite.c \
	../../C-Sources/zlib/infback.c \
	../../C-Sources/zlib/inffast.c \
	../../C-Sources/zlib/inflate.c \
	../../C-Sources/zlib/inftrees.c \
	../../C-Sources/zlib/trees.c \
	../../C-Sources/zlib/uncompr.c \
	../../C-Sources/zlib/zutil.c

libparson_la_SOURCES = \
	../../C-Sources/parson/parson.c
